tests/should_fail/for_struct_on_int_list.nv
module fail
// For destructure: struct on non-struct list
struct Point { x: Int, y: Int }
for Point { x, y } in [1, 2, 3] {
    println(Cast::string(x))
}
